<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/left_drawer"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:layout_gravity="start" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/home"
            style="@style/NavMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/social_person"
            android:drawablePadding="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/home" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color" />
        
        <TextView
            android:id="@+id/track_expense"
            style="@style/NavMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/content_new_attachment"
            android:drawablePadding="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/cadastrar_gasto" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color" />

        <TextView
            android:id="@+id/venues"
            style="@style/NavMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/location_place"
            android:drawablePadding="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/estabelecimentos_conveniados" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color" />

        <TextView
            android:id="@+id/history"
            style="@style/NavMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/device_access_storage"
            android:drawablePadding="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/hist_rico_de_gastos" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color" />

        <TextView
            android:id="@+id/timer"
            style="@style/NavMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/device_access_data_usage"
            android:drawablePadding="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/timer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color" />

        <TextView
            android:id="@+id/route"
            style="@style/NavMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/location_directions"
            android:drawablePadding="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/tra_ar_rota" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color" />

        <TextView
            android:id="@+id/logout"
            style="@style/NavMenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/device_access_not_secure"
            android:drawablePadding="10dip"
            android:gravity="left|center_vertical"
            android:text="@string/sair" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/vert_sep_color" />
    </LinearLayout>

</ScrollView>